# pm

./: AGENTS.md  Dockerfile
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai_client.py  ai_protocol.py  board_data.py  db.py  main.py  models.py
backend/static/: index.html
backend/tests/: test_ai_client.py  test_ai_protocol.py  test_main.py
docs/: AI_PROTOCOL.md  API.md  DB_SCHEMA.md  PLAN.md  RUN.md
frontend/: AGENTS.md  package-lock.json  package.json
frontend/src/app/api/ai/chat/: route.ts
frontend/src/app/api/board/: route.ts
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx
frontend/src/lib/: ai-protocol.ts  api.ts  db.ts  kanban.ts
frontend/src/test/: setup.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
