[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for PM MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
